--- a/package.json
+++ b/package.json
@@ -1,9 +1,22 @@
 {
-  "name": "qr Code",
+  "name": "qr-code",
   "version": "1.0.0",
-  "description": "暂无",
-  "main": "main.js",
+  "description": "ss",
+  "main": "./dist/index.js",
   "repository": "https://github.com/sunxiaoju/QRCode",
   "author": "sunxiaoju",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "build": "webpack"
+  },
+  "dependencies": {
+    "jsqr": "^1.4.0"
+  },
+  "devDependencies": {
+    "tslint": "^6.1.3",
+    "typescript": "^4.6.4",
+    "awesome-typescript-loader": "^5.2.1",
+    "webpack": "^5.72.0",
+    "webpack-cli": "^4.9.2"
+  }
 }
